objects/Contact_Motive__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Canal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuracion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cobertura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Motivos de Contacto</relationshipLabel>
        <relationshipName>Contact_Motives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <label>Incidente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inconcistency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inconcistencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_Text__c</fullName>
        <formula>IF( Is_Active__c , &quot;SÍ&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activo fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Associable_Text__c</fullName>
        <formula>IF( Is_Associable__c , &quot;SÍ&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asociable fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Associable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asociable a Incidente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base de Conocimiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Reiterations__c</fullName>
        <label>Máximo de Reiteraciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Segunda Linea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual de Servicio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Owner__c</fullName>
        <label>Propietario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Terceros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Motivo de Contacto</label>
    <listViews>
        <fullName>ABM_Motivo_de_contacto</fullName>
        <columns>Channel__c</columns>
        <columns>Service__c</columns>
        <columns>Incident__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact_Motive__c.Service_Incident</value>
        </filters>
        <label>ABM Motivo de contacto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ABM_Motivos_Contacto</fullName>
        <columns>Id_Service__c</columns>
        <columns>NAME</columns>
        <columns>Is_Associable__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact_Motive__c.Contact_Motive</value>
        </filters>
        <label>ABM Motivos de Contacto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ABM_Sintomas_STT</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Maximum_Reiterations__c</columns>
        <columns>Is_Active__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact_Motive__c.Technical_Service_Symptom</value>
        </filters>
        <label>ABM Síntomas STT</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>ABM_de_Motivos</fullName>
        <columns>Id_Service__c</columns>
        <columns>NAME</columns>
        <columns>Is_Associable__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>ABM de Motivos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>Id_Service__c</columns>
        <columns>NAME</columns>
        <columns>Is_Associable__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motivos de Contacto</pluralLabel>
    <recordTypes>
        <fullName>Contact_Motive</fullName>
        <active>true</active>
        <label>Contact Motive</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Incident</fullName>
        <active>true</active>
        <label>Service Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Service_Symptom</fullName>
        <active>true</active>
        <label>Technical Service Symptom</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>